--- a/accountbird-project/client/src/components/Sidebar.css
+++ b/accountbird-project/client/src/components/Sidebar.css
@@ -1,29 +1,40 @@
 /* client/src/components/Sidebar.css */
 .sidebar {
-  width: 250px;
-  background-color: #495057;
-  color: #fff;
-  padding-top: 1rem;
+    width: 250px;
+    background-color: #495057;
+    color: #fff;
+    padding-top: 1rem;
 }
 
 .sidebar nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .sidebar nav li {
-  padding: 1rem 2rem;
+    padding: 1rem 2rem;
 }
 
 .sidebar nav li a {
-  color: #fff;
-  text-decoration: none;
-  display: block;
-  font-size: 1.1rem;
-  transition: background-color 0.3s ease;
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    font-size: 1.1rem;
+    transition: background-color 0.3s ease;
 }
 
 .sidebar nav li a:hover {
-  background-color: #6c757d;
+    background-color: #6c757d;
+}
+
+/* Active class styles */
+.sidebar nav li a.active,
+.sidebar nav li.active-parent > div {
+    background-color: #6c757d; /* Highlight for active link or parent */
+    color: #fff;
+}
+
+.sidebar nav .submenu {
+    padding-left: 1rem; /* Indent for submenu */
 }
