Secondary nav is more dynamic. no more need for the back to list button.

--- a/accountbird-project/client/src/components/LoginPage.css
+++ b/accountbird-project/client/src/components/LoginPage.css
@@ -1,14 +1,20 @@
 /* client/src/components/LoginPage.css */
 .login-container {
-    background: #f4f4f4;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    margin: 2rem auto;
     text-align: center;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.login-container h2 {
-    margin-bottom: 1rem;
+.login-container .login {
+    background: white;
+    padding: 0 20px;
+    border-radius: 8px;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    max-width: 500px;
+    margin: auto;
+    text-align: left;
 }
