--- a/accountbird-project/client/src/App.css
+++ b/accountbird-project/client/src/App.css
@@ -1,55 +1,320 @@
 /* client/src/App.css */
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: "Inconsolata", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-size: 1.5rem;
+    color: #505050;
+}
+
 .layout-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .main-content-container {
-  display: flex;
-  flex: 1;
+    display: flex;
+    flex: 1;
 }
 
 .content-area {
-  flex: 1;
-  padding: 2rem;
-  background-color: #f8f9fa;
+    flex: 1;
+    background-color: white;
 }
 
-.loading-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-size: 1.5rem;
-  color: #555;
+.content-area .content {
+    position: relative;
+    padding: 40px;
+    min-height: calc(100% - 80px); /* Adjusted for header height */
 }
 
-/* Other global styles can go here */
-.secondary-btn {
-  padding: 0.5rem 1rem;
-  background-color: #6c757d;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.content-area .content .header {
+    position: relative;
 }
 
-.secondary-btn:hover {
-  background-color: #5a6268;
+.content-area .content .header button.secondary-btn {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 10px 20px;
+    background-color: #3CCF73;
+    color: white;
+    border: none;
+    border-radius: 0;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.content-area .content .header button.secondary-btn:hover {
+    background-color: #36b66a;
+}
+
+/* Layout Styles */
+
+.content-area .content.has-secondary-nav {
+    padding-left: 300px; /* Adjusted for larger sidebar width */
+}
+
+.content-area .content.has-secondary-nav nav.secondary-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 250px; /* Adjusted for larger sidebar width */
+    height: 100%;
+    background-color: #F0F0F0;
+    padding: 0;
+}
+
+.content-area .content.has-secondary-nav nav.secondary-nav a.back-link{
+    display: inline-block;
+    width: 100%;
+    padding: 10px 0;
+    background-color: #F0F0F0;
+    border: none;
+    border-radius: 0;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    text-align: left;
+}
+
+.content-area .content.has-secondary-nav nav.secondary-nav a.back-link svg{
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    margin-left: 15px;
+    transition: margin 0.3s ease;
+}
+
+.content-area .content.has-secondary-nav nav.secondary-nav a.back-link:hover svg{
+    margin-left: 5px;
+}
+
+.content-area .content.has-secondary-nav nav.secondary-nav button {
+    width: 100%;
+    padding: 10px 20px;
+    background-color: #F0F0F0;
+    border: none;
+    border-radius: 0;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    text-align: left;
+}
+
+.content-area .content.has-secondary-nav nav.secondary-nav button.active {
+    background-color: #FFD644;
+    color: #303030;
+}
+
+@media(max-width: 1200px) {
+    .content-area .content.has-secondary-nav{
+        padding-left: 40px;
+    }
+    .content-area .content.has-secondary-nav nav.secondary-nav {
+        width: 100%;
+        height: auto;
+    }
+    .content-area .content.has-secondary-nav nav.secondary-nav button{
+        display: inline-block;
+        width: auto;
+    }
+}
+
+hr {
+    border: none;
+    border-top: 5px solid #F0F0F0;
+    margin: 20px 0;
+    max-width: 600px;
+}
+
+/* Font Styles */
+
+h2 {
+    font-size: 35px;
+}
+
+/* Form Styles */
+
+form{
+    max-width: 600px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    color: #505050;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 10px 10px;
+    background-color: #F0F0F0;
+    border: none;
+    border-radius: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+.form-group select {
+    appearance: none;
+    width: 100%;
+    padding: 10px 10px;
+    background-color: #F0F0F0;
+    border: none;
+    border-radius: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 16px;
+}
+
+.submit-btn {
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 40px;
+    background: #3CCF73;
+    color: #fff;
+    border: none;
+    border-radius: 0;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.submit-btn:hover {
+    background: #36b66a;
+}
+
+.delete-btn {
+    display: block;
+    width: 100%;
+    max-width: 600px;
+    padding: 10px 20px;
+    margin-top: 40px;
+    background: #FF4E4E;
+    color: #fff;
+    border: none;
+    border-radius: 0;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.delete-btn:hover {
+    background: #E04343;
+}
+
+.success-message, .error-message {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 0;
+    text-align: center;
+}
+
+.success-message {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.error-message {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
+/* Table Styles */
+
+table{
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+table tbody {
+    width: 100%;
+}
+
+table tr {
+    width: 100%;
+    border-bottom: 2px solid white;
+}
+
+table tr th {
+    padding: 10px;
+    color: #505050;
+    text-align: left;
+}
+
+table tr th:last-child {
+    text-align: right;
+}
+
+table tr td {
+    padding: 10px;
+    background-color: #F0F0F0;
+    color: #505050;
+    text-align: left;
+}
+
+table tr td:last-child {
+    text-align: right;
+    padding: 0;
+}
+
+table tr td:last-child a,
+table tr td:last-child button {
+    padding: 10px 20px;
+    background-color: #3CCF73;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    border: none;
+    border-left: 2px solid white;
+    border-radius: 0;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+table tr td:last-child a:hover,
+table tr td:last-child button:hover {
+    background-color: #36b66a;
+}
+
+table tr td:last-child button.delete-btn {
+    background-color: #FF4E4E;
+}
+
+table tr td:last-child button.delete-btn:hover {
+    background-color: #E04343;
 }
