--- a/accountbird-project/client/src/components/AdminAccountDetail.css
+++ b/accountbird-project/client/src/components/AdminAccountDetail.css
@@ -1,13 +1,6 @@
 /* client/src/components/AccountDetail.css */
-.account-detail-container {
-    padding: 2rem;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.account-detail-container h3 {
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
+@media (min-width: 1200px) {
+    .content-area .content.account-content.has-secondary-nav nav.secondary-nav {
+        padding-top: 116px; /* Adjusted for nav height */
+    }
 }
